tests/src/frontend/typechecking/exhaustiveness/invalid/named_recursive_upcast.sk
base class F {
  children =
  | A{x: Int}
  | B{x: Int, y: F}
}

fun test(): String {
  (B{x => 1, y => A{x => 1}} : F) match {
  | B{x => Int _, y => A _} -> "Fail\n"
  }
}
